# ski-resort-demo

./: .gitignore  ARCHITECTURE.md  README.md  nuget.config
.aspire/: settings.json
.github/agents/: maf-dotnet.agents.md  maf-python.agents.md
src/: apphost.cs  apphost.run.json  ski-resort-demo.slnx
src/advisor-agent-dotnet/: AdvisorAgent.Dotnet.csproj  Program.cs
src/advisor-agent-dotnet/Properties/: launchSettings.json
src/data-generator/: .gitignore  README.md  pyproject.toml
src/data-generator/data_generator/: __init__.py  config.json  generator.py  main.py  models.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/public/: config.json
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: ChatPanel.tsx  LiftPanel.tsx  SafetyPanel.tsx  SlopePanel.tsx  SlopesAndLiftsPanel.tsx  WeatherPanel.tsx
src/frontend/src/lib/: a2a-client.ts  data-api.ts  use-config.ts
src/lift-traffic-agent-dotnet/: LiftTrafficAgent.Dotnet.csproj  Program.cs
src/lift-traffic-agent-dotnet/Properties/: launchSettings.json
src/lift-traffic-agent-dotnet/Services/: LiftDataService.cs
src/lift-traffic-agent-dotnet/Tools/: LiftTrafficTools.cs
src/safety-agent-python/: .gitignore  README.md  pyproject.toml
src/safety-agent-python/safety_agent_python/: __init__.py  agent_executor.py  main.py
src/safety-agent-python/services/: __init__.py  safety_service.py
src/safety-agent-python/tools/: __init__.py  safety_tools.py
src/shared-services/: CosmosAgentSessionStore.cs  CosmosSystemTextJsonSerializer.cs  CosmosThreadRepository.cs  ICosmosThreadRepository.cs  SharedServices.csproj
src/shared-services/Models/: AIChatModels.cs
src/ski-coach-agent-python/: .gitignore  README.md  pyproject.toml
src/ski-coach-agent-python/services/: __init__.py  coach_service.py
src/ski-coach-agent-python/ski_coach_agent_python/: __init__.py  agent_executor.py  main.py
src/ski-coach-agent-python/tools/: __init__.py  coach_tools.py
src/weather-agent-python/: README.md  pyproject.toml
src/weather-agent-python/services/: __init__.py  weather_service.py
src/weather-agent-python/tools/: __init__.py  weather_tools.py
src/weather-agent-python/weather_agent_python/: __init__.py  agent_executor.py  main.py
